--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:mabravog/desafio-walmart.git",
+  "scripts": {
+    "start": "node index.js"
+  },
   "author": "Matías Bravo <mabravogalvez@gmail.com>",
   "license": "MIT"
 }
