--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "desafio-walmart",
+  "description": "Desafío Walmart (Backend)",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:mabravog/desafio-walmart.git",
